style: unused imports and optimized code lines